--- a/BlueBucksKiosk/Base.lproj/Main.storyboard
+++ b/BlueBucksKiosk/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="결제하기"/>
+                                <connections>
+                                    <action selector="purchaseBtnPressed:" destination="0Xu-AD-NH7" eventType="touchUpInside" id="AMA-5G-Atj"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o8B-6y-PxB">
                                 <rect key="frame" x="16" y="88" width="361" height="264"/>
@@ -69,6 +72,9 @@
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="xmark.bin" catalog="system"/>
+                                        <connections>
+                                            <action selector="allClearBtnPressed:" destination="0Xu-AD-NH7" eventType="touchUpInside" id="14d-Sx-Yhs"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
