--- a/BlueBucksKiosk/Detail/detailPage.storyboard
+++ b/BlueBucksKiosk/Detail/detailPage.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -44,7 +44,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="smN-zl-ori">
                                 <rect key="frame" x="65" y="465.33333333333331" width="263" height="65.666666666666686"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제품 상세 설명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVQ-Cu-Mly">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제품 상세 설명" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVQ-Cu-Mly">
                                         <rect key="frame" x="0.0" y="0.0" width="263" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -79,10 +79,13 @@
                             <constraint firstItem="xuH-iH-yhV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="43" id="swM-NZ-Pta"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="W7N-Vt-Jiq" secondAttribute="bottom" constant="10" id="w3u-m3-dk3"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="xuH-iH-yhV" secondAttribute="bottom" constant="412" id="xZV-Pr-pth"/>
-                            <constraint firstItem="W7N-Vt-Jiq" firstAttribute="top" secondItem="smN-zl-ori" secondAttribute="bottom" constant="227" id="ydz-Sg-D6O"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="descriptionText" destination="hVQ-Cu-Mly" id="odg-oA-2Ho"/>
+                        <outlet property="imageView" destination="xuH-iH-yhV" id="OcQ-VD-ucT"/>
+                        <outlet property="nameLabel" destination="ztk-Ag-KiK" id="CGS-XE-p2W"/>
+                        <outlet property="priceLabel" destination="7GP-2J-9aj" id="2PT-hc-KPx"/>
                         <outlet property="stackView" destination="smN-zl-ori" id="S8V-aU-rji"/>
                     </connections>
                 </viewController>
