--- a/BlueBucksKiosk/Detail/Base.lproj/LaunchScreen.storyboard
+++ b/BlueBucksKiosk/Detail/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="MhS-DF-rVf">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="MhS-DF-rVf">
                                 <rect key="frame" x="64" y="296" width="265" height="261"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="261" id="4P5-H0-aBW"/>
+                                    <constraint firstAttribute="width" constant="265" id="XK7-wv-iwh"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.2941176593" green="0.64705884459999996" blue="0.83137255909999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="MhS-DF-rVf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0sN-dk-5Pf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MhS-DF-rVf" secondAttribute="bottom" constant="261" id="Ay4-74-epf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MhS-DF-rVf" secondAttribute="trailing" constant="64" id="CZe-l5-Ezq"/>
+                            <constraint firstItem="MhS-DF-rVf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="WPl-sP-rI9"/>
+                            <constraint firstItem="MhS-DF-rVf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="237" id="zHI-o4-eBx"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
