--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -128,7 +128,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellCount" destination="Ya5-ZV-i59" id="Kpv-xH-A7d"/>
-                <outlet property="cellimage" destination="gZu-gT-o9E" id="lar-WL-1cm"/>
+                <outlet property="cellImage" destination="gZu-gT-o9E" id="esA-Zh-kbE"/>
                 <outlet property="delete" destination="YM1-sR-wnM" id="2o7-uk-rIV"/>
                 <outlet property="minusButton" destination="YUM-lF-2Sh" id="sPm-ya-3be"/>
                 <outlet property="name" destination="8Rb-V2-aAx" id="tsi-Zy-ls6"/>
