--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -54,21 +54,21 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-lF-2Sh">
+                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-lF-2Sh">
                         <rect key="frame" x="307" y="31" width="8" height="8"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="TwB-yF-fN9"/>
                             <constraint firstAttribute="width" constant="8" id="rsu-Cx-vwD"/>
                         </constraints>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="minus" catalog="system">
+                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="9"/>
                         </buttonConfiguration>
                         <connections>
-                            <action selector="tappedDecreseButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dh6-Vw-EJs"/>
+                            <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eTP-kI-ZEy"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YM1-sR-wnM">
+                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YM1-sR-wnM">
                         <rect key="frame" x="326" y="2" width="8" height="8"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="6fd-TZ-1aa"/>
@@ -84,7 +84,7 @@
                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="8"/>
                         </buttonConfiguration>
                         <connections>
-                            <action selector="deleteButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="laE-EU-YKO"/>
+                            <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2Hf-um-UMq"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN5-NU-7oT">
@@ -94,11 +94,11 @@
                             <constraint firstAttribute="height" constant="8" id="cWf-zU-3x7"/>
                         </constraints>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
+                        <buttonConfiguration key="configuration" style="plain" image="minus" catalog="system">
                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="9"/>
                         </buttonConfiguration>
                         <connections>
-                            <action selector="tappedIncreseButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="kdQ-UG-ftZ"/>
+                            <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dPL-3o-vix"/>
                         </connections>
                     </button>
                 </subviews>
@@ -129,8 +129,6 @@
             <connections>
                 <outlet property="cellCount" destination="Ya5-ZV-i59" id="Kpv-xH-A7d"/>
                 <outlet property="cellImage" destination="gZu-gT-o9E" id="esA-Zh-kbE"/>
-                <outlet property="delete" destination="YM1-sR-wnM" id="2o7-uk-rIV"/>
-                <outlet property="minusButton" destination="YUM-lF-2Sh" id="sPm-ya-3be"/>
                 <outlet property="name" destination="8Rb-V2-aAx" id="tsi-Zy-ls6"/>
                 <outlet property="price" destination="JyQ-Sc-M0B" id="ozc-zw-TKY"/>
                 <outlet property="size" destination="2Pq-lG-nRq" id="s8w-7T-F81"/>
